cabal-version:      3.4
name:               amaru-treasury-tx
version:            0.2.19.0
synopsis:           Build unsigned Amaru treasury transactions
description:
  Haskell port of the Amaru treasury bash recipes
  ('disburse', 'reorganize', 'withdraw') from
  pragma-org/amaru-treasury/journal/2026/. The CLI
  emits unsigned Conway transactions for offline
  signing.

license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  assets/blueprints/sundae-order.cip57.json
  assets/blueprints/treasury-spend.cip57.json
  assets/plutus/permissions.cbor
  assets/plutus/README.md
  assets/plutus/scopes.cbor
  assets/plutus/sundae_order.cbor
  assets/plutus/treasury.cbor
  assets/plutus/treasury_registry.cbor
  docs/assets/asciinema/*.cast
  docs/assets/intent-schema.json
  docs/assets/treasury-inspect-schema.json
  docs/assets/tx-report-schema.json
  lib/Amaru/Treasury/Api/queries/*.rq
  lib/Amaru/Treasury/History/queries/*.rq
  lib/Amaru/Treasury/History/shapes/*.shacl.ttl
  scripts/smoke/cardano-cli-envelope-oracle
  scripts/smoke/devnet-local
  scripts/smoke/smoke.sh
  scripts/smoke/swap-quote-docs
  scripts/smoke/swap-quote-override
  scripts/smoke/swap-rerate-offline
  scripts/smoke/swap-wizard-signers
  scripts/smoke/treasury-inspect
  scripts/smoke/tx-build-pipe
  test/fixtures/106-cardano-cli-oracle/*.addr
  test/fixtures/106-cardano-cli-oracle/*.cborHex
  test/fixtures/106-cardano-cli-oracle/*.json
  test/fixtures/106-cardano-cli-oracle/*.md
  test/fixtures/106-cardano-cli-oracle/*.version
  test/fixtures/118-vault-witness/*.addr
  test/fixtures/118-vault-witness/*.addr_xsk
  test/fixtures/118-vault-witness/*.hash
  test/fixtures/118-vault-witness/*.hex
  test/fixtures/118-vault-witness/*.json
  test/fixtures/118-vault-witness/*.md
  test/fixtures/118-vault-witness/*.skey
  test/fixtures/118-vault-witness/*.vkey
  test/fixtures/disburse/**/*.cbor
  test/fixtures/disburse/**/*.json
  test/fixtures/disburse/**/*.md
  test/fixtures/disburse-wizard/**/*.json
  test/fixtures/registry-init-wizard/*.json
  test/fixtures/swap/**/*.cbor
  test/fixtures/swap/**/*.json
  test/fixtures/swap/**/*.md
  test/fixtures/swap-quote/**/*.json
  test/fixtures/swap-quote/**/*.md
  test/fixtures/swap-wizard/**/*.json
  test/fixtures/withdraw/**/*.cbor
  test/fixtures/withdraw/**/*.json

flag werror
  description: Enable -Werror
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wmissing-export-lists -Wname-shadowing
    -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    ViewPatterns

source-repository head
  type:     git
  location: https://github.com/lambdasistemi/amaru-treasury-tx

library
  import:           warnings
  hs-source-dirs:   lib
  default-language: GHC2021
  autogen-modules:  Paths_amaru_treasury_tx
  other-modules:    Paths_amaru_treasury_tx
  exposed-modules:
    Amaru.Treasury
    Amaru.Treasury.Api.Attach
    Amaru.Treasury.Api.BuildContingencyDisburse
    Amaru.Treasury.Api.BuildDisburse
    Amaru.Treasury.Api.BuildReorganize
    Amaru.Treasury.Api.BuildSwap
    Amaru.Treasury.Api.BuildSwapRerate
    Amaru.Treasury.Api.Config
    Amaru.Treasury.Api.GraphEffect
    Amaru.Treasury.Api.History
    Amaru.Treasury.Api.Indexer
    Amaru.Treasury.Api.Indexer.Internal
    Amaru.Treasury.Api.Introspect
    Amaru.Treasury.Api.LagGuard
    Amaru.Treasury.Api.Proofs
    Amaru.Treasury.Api.RateLimit
    Amaru.Treasury.Api.Readiness
    Amaru.Treasury.Api.Readiness.Internal
    Amaru.Treasury.Api.Server
    Amaru.Treasury.Api.SpaFallback
    Amaru.Treasury.Api.State
    Amaru.Treasury.Api.Submit
    Amaru.Treasury.Api.Ttl
    Amaru.Treasury.Api.Types
    Amaru.Treasury.Api.VerifyWitness
    Amaru.Treasury.AuxData
    Amaru.Treasury.Backend
    Amaru.Treasury.Backend.N2C
    Amaru.Treasury.Build
    Amaru.Treasury.Build.Common
    Amaru.Treasury.Build.Disburse
    Amaru.Treasury.Build.Error
    Amaru.Treasury.Build.Error.Context
    Amaru.Treasury.Build.Error.Convert
    Amaru.Treasury.Build.Error.Exception
    Amaru.Treasury.Build.Error.Render
    Amaru.Treasury.Build.Error.Types
    Amaru.Treasury.Build.GovernanceWithdrawalInit
    Amaru.Treasury.Build.RegistryInit
    Amaru.Treasury.Build.Reorganize
    Amaru.Treasury.Build.Reorganize.Batch
    Amaru.Treasury.Build.ReportWriter
    Amaru.Treasury.Build.Result
    Amaru.Treasury.Build.StakeRewardInit
    Amaru.Treasury.Build.Swap
    Amaru.Treasury.Build.SwapCancel
    Amaru.Treasury.Build.SwapRerate
    Amaru.Treasury.Build.Trace
    Amaru.Treasury.Build.Withdraw
    Amaru.Treasury.ChainContext
    Amaru.Treasury.ChainContext.Fixture
    Amaru.Treasury.Cli
    Amaru.Treasury.Cli.AttachWitness
    Amaru.Treasury.Cli.Common
    Amaru.Treasury.Cli.Config
    Amaru.Treasury.Cli.DisburseWizard
    Amaru.Treasury.Cli.Envelope
    Amaru.Treasury.Cli.GovernanceWithdrawalInitWizard
    Amaru.Treasury.Cli.History
    Amaru.Treasury.Cli.Passphrase
    Amaru.Treasury.Cli.RegistryInitWizard
    Amaru.Treasury.Cli.ReorganizeWizard
    Amaru.Treasury.Cli.ReportRender
    Amaru.Treasury.Cli.Serve
    Amaru.Treasury.Cli.StakeRewardInitWizard
    Amaru.Treasury.Cli.Submit
    Amaru.Treasury.Cli.SwapCancel
    Amaru.Treasury.Cli.SwapCommon
    Amaru.Treasury.Cli.SwapOptions
    Amaru.Treasury.Cli.SwapQuote
    Amaru.Treasury.Cli.SwapRerate
    Amaru.Treasury.Cli.SwapWizard
    Amaru.Treasury.Cli.TreasuryInspect
    Amaru.Treasury.Cli.TxBuild
    Amaru.Treasury.Cli.UpdateCheck
    Amaru.Treasury.Cli.Vault
    Amaru.Treasury.Cli.WithdrawWizard
    Amaru.Treasury.Cli.Witness
    Amaru.Treasury.Config
    Amaru.Treasury.Config.File
    Amaru.Treasury.Config.OptEnv
    Amaru.Treasury.Config.Resolve
    Amaru.Treasury.Config.Types
    Amaru.Treasury.Constants
    Amaru.Treasury.Devnet.DisburseSubmit
    Amaru.Treasury.Devnet.GovernanceWithdrawalInit
    Amaru.Treasury.Devnet.GovernanceWithdrawalInit.Core
    Amaru.Treasury.Devnet.RegistryInit
    Amaru.Treasury.Devnet.Runner
    Amaru.Treasury.Devnet.StakeRewardInit
    Amaru.Treasury.History.Sparql
    Amaru.Treasury.Indexer.Decoder
    Amaru.Treasury.Inspect
    Amaru.Treasury.Inspect.Render
    Amaru.Treasury.Inspect.Schema
    Amaru.Treasury.Inspect.SwapOrderDatum
    Amaru.Treasury.Inspect.SwapOrderProjection
    Amaru.Treasury.Inspect.TreasurySpendProjection
    Amaru.Treasury.Inspect.Types
    Amaru.Treasury.IntentJSON
    Amaru.Treasury.IntentJSON.Common
    Amaru.Treasury.IntentJSON.Schema
    Amaru.Treasury.LedgerParse
    Amaru.Treasury.Metadata
    Amaru.Treasury.PParams
    Amaru.Treasury.Redeemer
    Amaru.Treasury.Registry.Constants
    Amaru.Treasury.Registry.Derive
    Amaru.Treasury.Registry.Metadata
    Amaru.Treasury.Registry.Verify
    Amaru.Treasury.Report
    Amaru.Treasury.Report.Accounting
    Amaru.Treasury.Report.Classify
    Amaru.Treasury.Report.Cli
    Amaru.Treasury.Report.Identity
    Amaru.Treasury.Report.Identity.Constants
    Amaru.Treasury.Report.Identity.Resolve
    Amaru.Treasury.Report.Render
    Amaru.Treasury.Report.Render.Address
    Amaru.Treasury.Report.Render.Markdown
    Amaru.Treasury.Report.Render.Time
    Amaru.Treasury.Report.Schema
    Amaru.Treasury.Scope
    Amaru.Treasury.Summary
    Amaru.Treasury.Sundae.Contracts
    Amaru.Treasury.Swap.Rerate
    Amaru.Treasury.Swap.Rerate.Budget
    Amaru.Treasury.Swap.Rerate.Plan
    Amaru.Treasury.Swap.Rerate.Types
    Amaru.Treasury.Tx.AttachWitness
    Amaru.Treasury.Tx.Disburse
    Amaru.Treasury.Tx.Disburse.Trace
    Amaru.Treasury.Tx.DisburseBuild
    Amaru.Treasury.Tx.DisburseIntentJSON
    Amaru.Treasury.Tx.DisburseWizard
    Amaru.Treasury.Tx.DisburseWizard.Trace
    Amaru.Treasury.Tx.Envelope
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizard
    Amaru.Treasury.Tx.RegistryInitWizard
    Amaru.Treasury.Tx.Reorganize
    Amaru.Treasury.Tx.ReorganizeWizard
    Amaru.Treasury.Tx.ReorganizeWizard.Trace
    Amaru.Treasury.Tx.StakeRewardInitWizard
    Amaru.Treasury.Tx.Submit
    Amaru.Treasury.Tx.Swap
    Amaru.Treasury.Tx.SwapCancel
    Amaru.Treasury.Tx.SwapCancel.Datum
    Amaru.Treasury.Tx.SwapQuote
    Amaru.Treasury.Tx.SwapQuote.Source
    Amaru.Treasury.Tx.SwapWizard
    Amaru.Treasury.Tx.SwapWizard.Trace
    Amaru.Treasury.Tx.Withdraw
    Amaru.Treasury.Tx.WithdrawWizard
    Amaru.Treasury.Tx.WithdrawWizard.Trace
    Amaru.Treasury.Tx.Witness
    Amaru.Treasury.UtxoSelect
    Amaru.Treasury.Validity
    Amaru.Treasury.Vault.Age
    Amaru.Treasury.Vault.Witness
    Amaru.Treasury.Wizard.Common
    Amaru.Treasury.Wizard.Disburse
    Amaru.Treasury.Wizard.Event
    Amaru.Treasury.Wizard.Failure
    Amaru.Treasury.Wizard.InputControl
    Amaru.Treasury.Wizard.Reorganize
    Amaru.Treasury.Wizard.Swap

  build-depends:
    , aeson
    , aeson-pretty
    , age
    , async
    , base                                         <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-node-clients
    , cardano-node-clients:block-indexer
    , cardano-node-clients:tx-history-indexer-lib
    , cardano-node-clients:utxo-indexer-lib
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , containers
    , contra-tracer
    , crypton
    , directory
    , file-embed
    , filepath
    , github-release-check
    , haskeline
    , http-api-data
    , http-client
    , http-conduit
    , http-media
    , http-types
    , memory
    , microlens
    , opt-env-conf
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-network:api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , process
    , rocksdb-kv-transactions:kv-transactions
    , scientific
    , servant
    , servant-server
    , stm
    , tagged
    , temporary
    , text
    , time
    , transformers
    , unix
    , wai
    , warp
    , yaml

executable amaru-treasury-tx
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-tx
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , aeson
    , aeson-pretty
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , containers
    , contra-tracer
    , directory
    , microlens
    , opt-env-conf
    , optparse-applicative
    , ouroboros-network:api
    , text
    , time
    , with-utf8

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable capture-swap-context
  import:           warnings
  hs-source-dirs:   app/capture-swap-context
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bytestring
    , cardano-ledger-core
    , containers
    , directory
    , optparse-applicative
    , ouroboros-network:api

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable swap-probe
  import:           warnings
  hs-source-dirs:   app/swap-probe
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-slotting
    , containers
    , ouroboros-network:api

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable horizon-probe
  import:           warnings
  hs-source-dirs:   app/horizon-probe
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base                   <5
    , cardano-node-clients
    , ouroboros-network:api

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable devnet-cli-smoke-host
  import:           warnings
  hs-source-dirs:   app/devnet-cli-smoke-host
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , aeson
    , amaru-treasury-tx
    , base                         <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:devnet
    , cardano-slotting
    , cardano-tx-tools
    , containers
    , directory
    , filepath
    , microlens
    , ouroboros-network:api
    , process
    , text
    , time
    , unix

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable amaru-treasury-inspect-schema
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-inspect-schema
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base               <5
    , bytestring

executable amaru-treasury-intent-schema
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-intent-schema
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base               <5
    , bytestring

executable amaru-treasury-report-schema
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-report-schema
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base               <5
    , bytestring

executable amaru-treasury-tx-api
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-tx-api
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -T"
  build-depends:
    , aeson
    , amaru-treasury-tx
    , async
    , base                                   <5
    , bytestring
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-node-clients:block-indexer
    , cardano-node-clients:utxo-indexer-lib
    , containers
    , opt-env-conf
    , optparse-applicative
    , ouroboros-network:api
    , servant-server
    , stm
    , streaming-commons
    , text
    , time
    , wai
    , warp

test-suite unit-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            Spec.hs
  default-language:   GHC2021
  autogen-modules:    Paths_amaru_treasury_tx
  other-modules:
    Amaru.Treasury.Api.AttachSpec
    Amaru.Treasury.Api.BuildMetadataSpec
    Amaru.Treasury.Api.BuildSwapRerateSpec
    Amaru.Treasury.Api.ConfigSpec
    Amaru.Treasury.Api.HandlersIndexerSpec
    Amaru.Treasury.Api.HistorySpec
    Amaru.Treasury.Api.IndexerSpec
    Amaru.Treasury.Api.IntrospectSpec
    Amaru.Treasury.Api.LagGuardSpec
    Amaru.Treasury.Api.ProofsSpec
    Amaru.Treasury.Api.ReadinessSpec
    Amaru.Treasury.Api.ServerSpec
    Amaru.Treasury.Api.SpaFallbackSpec
    Amaru.Treasury.Api.SubmitSpec
    Amaru.Treasury.Api.TtlSpec
    Amaru.Treasury.Api.TypesSpec
    Amaru.Treasury.Api.VerifyWitnessSpec
    Amaru.Treasury.AuxDataSpec
    Amaru.Treasury.Build.CommonSpec
    Amaru.Treasury.Build.GovernanceWithdrawalInitSpec
    Amaru.Treasury.Build.NetworkGuardSpec
    Amaru.Treasury.Build.Reorganize.BatchSpec
    Amaru.Treasury.Build.ReorganizeDispatchSpec
    Amaru.Treasury.Build.SwapRerateSpec
    Amaru.Treasury.Build.WithdrawSpec
    Amaru.Treasury.BuildSpec
    Amaru.Treasury.Cli.CommonSpec
    Amaru.Treasury.Cli.ConfigSpec
    Amaru.Treasury.Cli.ContingencyDisburseWizardParserSpec
    Amaru.Treasury.Cli.DisburseWizardInputControlSpec
    Amaru.Treasury.Cli.EnvelopeSpec
    Amaru.Treasury.Cli.GovernanceWithdrawalInitWizardInputControlSpec
    Amaru.Treasury.Cli.GovernanceWithdrawalInitWizardParserSpec
    Amaru.Treasury.Cli.HistorySpec
    Amaru.Treasury.Cli.ParserSpec
    Amaru.Treasury.Cli.RegistryInitWizardInputControlSpec
    Amaru.Treasury.Cli.RegistryInitWizardModeSplitSpec
    Amaru.Treasury.Cli.RegistryInitWizardParserSpec
    Amaru.Treasury.Cli.ReorganizeWizardDispatchSpec
    Amaru.Treasury.Cli.ReorganizeWizardInputControlSpec
    Amaru.Treasury.Cli.ReorganizeWizardParserSpec
    Amaru.Treasury.Cli.StakeRewardInitWizardInputControlSpec
    Amaru.Treasury.Cli.StakeRewardInitWizardParserSpec
    Amaru.Treasury.Cli.SwapCancelSpec
    Amaru.Treasury.Cli.SwapRerateSpec
    Amaru.Treasury.Cli.SwapWizardInputControlSpec
    Amaru.Treasury.Cli.TxBuildRequiredUtxosSpec
    Amaru.Treasury.Cli.VaultSpec
    Amaru.Treasury.Cli.WithdrawWizardInputControlSpec
    Amaru.Treasury.Cli.WitnessSpec
    Amaru.Treasury.Config.FileSpec
    Amaru.Treasury.Config.ResolveSpec
    Amaru.Treasury.ConstantsSpec
    Amaru.Treasury.Devnet.DisburseSubmitSpec
    Amaru.Treasury.Devnet.GovernanceWithdrawalInitSpec
    Amaru.Treasury.Devnet.RegistryInitSpec
    Amaru.Treasury.Devnet.StakeRewardInitSpec
    Amaru.Treasury.History.SparqlSpec
    Amaru.Treasury.Indexer.DecoderFixtures
    Amaru.Treasury.Indexer.DecoderSpec
    Amaru.Treasury.Inspect.SchemaSpec
    Amaru.Treasury.Inspect.SwapOrderDatumSpec
    Amaru.Treasury.Inspect.SwapOrderProjectionSpec
    Amaru.Treasury.Inspect.TreasurySpendProjectionSpec
    Amaru.Treasury.IntentJSONSchemaSpec
    Amaru.Treasury.IntentJSONSpec
    Amaru.Treasury.LedgerParseSpec
    Amaru.Treasury.MetadataSpec
    Amaru.Treasury.PParamsSpec
    Amaru.Treasury.RedeemerSpec
    Amaru.Treasury.ReferencesSpec
    Amaru.Treasury.Registry.ConstantsSpec
    Amaru.Treasury.Registry.DeriveSpec
    Amaru.Treasury.Registry.MetadataSpec
    Amaru.Treasury.Registry.VerifySpec
    Amaru.Treasury.Report.CliSpec
    Amaru.Treasury.Report.IdentitySpec
    Amaru.Treasury.Report.RenderSpec
    Amaru.Treasury.ReportSchemaSpec
    Amaru.Treasury.ReportSpec
    Amaru.Treasury.ScopeSpec
    Amaru.Treasury.Smoke.CliDevnetSmokeSpec
    Amaru.Treasury.SummarySpec
    Amaru.Treasury.Swap.Rerate.BudgetSpec
    Amaru.Treasury.Swap.Rerate.PlanSpec
    Amaru.Treasury.Swap.RerateSpec
    Amaru.Treasury.Tx.AttachWitnessSpec
    Amaru.Treasury.Tx.DisburseBuildSpec
    Amaru.Treasury.Tx.DisburseSpec
    Amaru.Treasury.Tx.DisburseWizardSpec
    Amaru.Treasury.Tx.EnvelopeSpec
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizardNetworkGuardSpec
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizardPropertyEnforcementSpec
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizardSpec
    Amaru.Treasury.Tx.RegistryInitWizardBootstrapSpec
    Amaru.Treasury.Tx.RegistryInitWizardNetworkGuardSpec
    Amaru.Treasury.Tx.RegistryInitWizardNoSimulationSpec
    Amaru.Treasury.Tx.RegistryInitWizardSpec
    Amaru.Treasury.Tx.ReorganizeWizardSpec
    Amaru.Treasury.Tx.StakeRewardInitWizardNetworkGuardSpec
    Amaru.Treasury.Tx.StakeRewardInitWizardNoSimulationSpec
    Amaru.Treasury.Tx.StakeRewardInitWizardSpec
    Amaru.Treasury.Tx.SubmitSpec
    Amaru.Treasury.Tx.SwapCancelSpec
    Amaru.Treasury.Tx.SwapQuoteSpec
    Amaru.Treasury.Tx.SwapSpec
    Amaru.Treasury.Tx.SwapWizardSpec
    Amaru.Treasury.Tx.WithdrawSpec
    Amaru.Treasury.Tx.WithdrawWizardSpec
    Amaru.Treasury.Tx.WitnessSpec
    Amaru.Treasury.UtxoSelectSpec
    Amaru.Treasury.Vault.AgeSpec
    Amaru.Treasury.Vault.WitnessSpec
    Amaru.Treasury.Wizard.BuildContingencyDisburseSpec
    Amaru.Treasury.Wizard.BuildDisburseSpec
    Amaru.Treasury.Wizard.BuildReorganizeSpec
    Amaru.Treasury.Wizard.BuildSwapSpec
    Amaru.Treasury.Wizard.EventSpec
    Amaru.Treasury.Wizard.FailureSpec
    Amaru.Treasury.Wizard.InputControlSpec
    Amaru.Treasury.Wizard.InputControlTestHelpers
    Amaru.Treasury.Wizard.SwapSpec
    Paths_amaru_treasury_tx
    PlaceholderSpec

  build-depends:
    , aeson
    , aeson-pretty
    , age
    , amaru-treasury-tx
    , async
    , base                                         <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:block-indexer
    , cardano-node-clients:tx-history-indexer-lib
    , cardano-node-clients:utxo-indexer-lib
    , cardano-slotting
    , cardano-tx-tools
    , containers
    , contra-tracer
    , directory
    , file-embed
    , filepath
    , hspec
    , hspec-discover
    , http-client
    , http-types
    , jsonschema
    , microlens
    , opt-env-conf
    , optparse-applicative
    , ouroboros-network:api
    , plutus-core
    , QuickCheck
    , serialise
    , servant
    , servant-server
    , stm
    , tagged
    , temporary
    , text
    , time
    , wai
    , wai-extra

  build-tool-depends: hspec-discover:hspec-discover

test-suite golden-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/golden
  main-is:            Spec.hs
  default-language:   GHC2021
  other-modules:
    AdaDisburseGoldenSpec
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizardMaterializationSpec
    Amaru.Treasury.Tx.GovernanceWithdrawalInitWizardProposalSpec
    Amaru.Treasury.Tx.RegistryInitWizardMintSpec
    Amaru.Treasury.Tx.RegistryInitWizardReferenceScriptsSpec
    Amaru.Treasury.Tx.RegistryInitWizardSeedSplitSpec
    Amaru.Treasury.Tx.StakeRewardInitWizardPlainAccountSpec
    Amaru.Treasury.Tx.StakeRewardInitWizardScriptAccountSpec
    EnvelopeOracleSpec
    GovernanceWithdrawalInitIntentSpec
    GraphEffectGoldenSpec
    PlaceholderSpec
    RegistryInitIntentSpec
    RegistryWalkGoldenSpec
    ReorganizeGoldenSpec
    ReportRenderActionGoldenSpec
    ReportRenderSwapGoldenSpec
    StakeRewardInitIntentSpec
    Support.GovernanceWithdrawalInitFixtures
    Support.GovernanceWithdrawalInitWizardFixtures
    Support.RegistryInitFixtures
    Support.RegistryInitWizardFixtures
    Support.StakeRewardInitFixtures
    Support.StakeRewardInitWizardFixtures
    SwapGoldenSpec
    SwapQuoteAuditGoldenSpec
    TreasuryInspectGoldenSpec
    UsdmDisburseGoldenSpec
    WithdrawGoldenSpec

  build-depends:
    , aeson
    , aeson-pretty
    , amaru-treasury-tx
    , base                    <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-slotting
    , cardano-tx-tools
    , containers
    , directory
    , hspec
    , microlens
    , text
    , transformers

  build-tool-depends: hspec-discover:hspec-discover

-- TDD red-step bucket. Hosts assertions that capture intended
-- post-fix behavior before the implementation lands. Tests here
-- are expected to fail on the current builder and pass once the
-- corresponding green-step task ships. NOT part of the default
-- gate (`nix build .#checks.unit` / `just unit` / `just ci`); run
-- with `just red` or `cabal test red-tests` to see the executable
-- red proof.
test-suite red-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/red
  main-is:            Spec.hs
  default-language:   GHC2021
  other-modules:      Amaru.Treasury.Tx.SwapWizardRedSpec
  build-depends:
    , aeson
    , amaru-treasury-tx
    , base                 <5
    , cardano-ledger-core
    , hspec

  build-tool-depends: hspec-discover:hspec-discover

test-suite devnet-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/devnet
  main-is:            Spec.hs
  default-language:   GHC2021
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Amaru.Treasury.Api.IndexerSmokeSpec
    Amaru.Treasury.Devnet.MixedUtxoSmoke
    Amaru.Treasury.Devnet.SmokeSpec

  build-depends:
    , aeson
    , amaru-treasury-tx
    , async
    , base                                         <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:block-indexer
    , cardano-node-clients:devnet
    , cardano-node-clients:tx-history-indexer-lib
    , cardano-node-clients:utxo-indexer-lib
    , cardano-slotting
    , cardano-tx-tools
    , containers
    , directory
    , filepath
    , hspec
    , hspec-discover
    , http-client
    , http-types
    , microlens
    , network
    , ouroboros-network:api
    , plutus-core
    , servant-server
    , tagged
    , temporary
    , text
    , time
    , transformers
    , unix
    , wai
    , warp

  build-tool-depends: hspec-discover:hspec-discover
